--- a/src/main/config/config.ini
+++ b/src/main/config/config.ini
@@ -1,12 +1,12 @@
 #TODO correct values and set defaults in code
 [General]
 input_df_file: small_synthDF
-steps_of_coTraining: 3
-test_ratio = 0.1
-num_iter: 60
+steps_of_cotraining: 3
+test_ratio: 0.1
+number_of_iterations: 60
+start_iteration: 0
 epoch_num: 150
 batch_size: 32
-start_iter: 0
 
 [Classifier1]
 classifier = alignn
