global pu_setup and reorganized project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-data/input/*
-!data/input/small_synthDF
-!data/input/stabilityDF015
+data/input/generated/*
 data/results/*.csv #might need to change with separate directories for 3 experiments.
