data setup for pu learning from jang_2020 paper

--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,14 @@
 [General]
 input_df_file: small_synthDF
 steps_of_cotraining: 3
-test_ratio: 0.1
-number_of_iterations: 60
+leaveout_test_portion: 0.05
 start_iteration: 0
 epoch_num: 150
 batch_size: 32
+
+[PuLearning]
+test_ratio: 0.2
+number_of_iterations: 60
 
 [Classifier1]
 classifier = alignn
