data preparation for alignn

--- a/config.ini
+++ b/config.ini
@@ -2,24 +2,18 @@
 [General]
 input_df_file: small_synthDF
 steps_of_cotraining: 3
-leaveout_test_portion: 0.05
-start_iteration: 0
-epoch_num: 150
-batch_size: 32
 
 [PuLearning]
+validation_ratio: 0.1
 test_ratio: 0.2
+leaveout_test_ratio: 0.05
 number_of_iterations: 60
+start_iteration: 0
 
 [Classifier1]
-classifier = alignn
 cutoff = 5
-n_rbf = 30
-n_atom_basis = 64
-n_filters = 64
-n_interactions = 3
-lr = 1e-3
-#learning rate
+epochs: 150
+batch_size: 32
 
 [Classifier2]
 classifier = alignn
