setup alignn functions fit and predict

--- a/config.ini
+++ b/config.ini
@@ -9,11 +9,12 @@ test_ratio: 0.2
 leaveout_test_ratio: 0.05
 number_of_iterations: 60
 start_iteration: 0
+prediction_threshold:
 
 [Classifier1]
 cutoff = 5
 epochs: 150
-batch_size: 32
+batch_size: 176
 
 [Classifier2]
 classifier = alignn
