--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,17 @@
 #TODO correct values and set defaults in code
 [General]
 input_df_file: small_synthDF
+
+[CoTraining]
 steps_of_cotraining: 3
 
 [PuLearning]
 validation_ratio: 0.1
 test_ratio: 0.2
 leaveout_test_ratio: 0.05
-number_of_iterations: 60
+number_of_iterations: 3
 start_iteration: 0
-prediction_threshold:
+prediction_threshold: 0.5
 
 [Classifier1]
 cutoff = 5
