--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
-#TODO correct values and set defaults in code
+#TODO set defaults in code?
 [General]
 input_df_file: small_synthDF
 
 [CoTraining]
-steps_of_cotraining: 2
+steps_of_cotraining: 4
 
 [PuLearning]
 validation_ratio: 0.1
@@ -11,7 +11,7 @@ test_ratio: 0.2
 leaveout_test_ratio: 0.05
 number_of_iterations: 3
 start_iteration: 0
-prediction_threshold: 0.75
+use_top: 0.02
 
 [Classifier1]
 cutoff = 5
