--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 data/input/generated/*
-data/results/plot/* #might need to change with separate directories for 3 experiments.
+data/results/plots/*
 #data/input/new/*
